all request are done instead of get blogs by category
